--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,7 @@
-/*=============== GOOGLE FONTS ===============*/
+/*=============== FONT ===============*/
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;600;700;800&display=swap');
 
-/*=============== VARIABLES CSS ===============*/
+/*=============== VARIABLES ===============*/
 :root {
   --header-height: 3.5rem;
   --hue: 162;
@@ -13,7 +13,6 @@
   --container-color: #1A1A1A;
 
   /*========== Font and typography ==========*/
-  /*.5rem = 8px | 1rem = 16px ...*/
   --body-font: "Red Hat Display", sans-serif;
   --biggest-font-size: 2rem;
   --bigger-font-size: 1.25rem;
@@ -113,29 +112,29 @@ svg {
   padding-block: 5rem 2rem;
 }
 
-.section__title, 
-.section__subtitle {
+.section-title, 
+.section-subtitle {
   text-align: center;
   color: var(--title-color);
   font-weight: var(--font-semi-bold);
 }
 
-.section__title {
+.section-title {
   font-size: var(--h1-font-size);
   margin-bottom: 1.5rem;
 }
 
-.section__subtitle {
+.section-subtitle {
   font-size: var(--small-font-size);
   margin-bottom: .25rem;
 }
 
-.section__subtitle span {
+.section-subtitle span {
   color: var(--first-color);
 }
 
 .main {
-  overflow: hidden; /* For animation ScrollReveal */
+  overflow: hidden;
 }
 
 /* HEADER & NAV */
@@ -155,17 +154,17 @@ svg {
   align-items: center;
 }
 
-.nav__logo{
+.nav-logo{
   color: var(--title-color);
   font-weight: var(--font-semi-bold);
   font-size: 30px;
 }
-.nav__logo span{
+.nav-logo span{
   color: var(--first-color);
 }
 
-.nav__toggle,
-.nav__close {
+.nav-toggle,
+.nav-close {
   display: flex;
   font-size: 1.2rem;
   color: var(--title-color);
@@ -174,49 +173,43 @@ svg {
 
 /* Navigation for mobile devices */
 @media screen and (max-width: 1023px) {
-  .nav__menu{
+  .nav-menu{
     position: fixed;
     top: 0;
-    right: -100%; /* Changed from 'right: 0;' */
-    background-color: hsla(0, 0%, 10%, .3);
+    right: -100%;
+    background-color: var(--body-color);
     width: 75%;
     height: 100%;
     padding: 4.5rem 0 0 3rem;
-    backdrop-filter: blur(24px); 
-    -webkit-backdrop-filter: blur(24px);
     transition: right .4s; 
   }
 }
 
-.nav__list{
+.nav-list{
   display: flex;
   flex-direction: column;
   row-gap: 3rem;
 }
 
-.nav__link{
+.nav-link{
   color: var(--title-color);
   font-weight: var(--font-medium);
   transition: color .4s;
 }
 
-.nav__link:hover{
+.nav-link:hover{
   color: var(--first-color);
 }
 
-.nav__close{
+.nav-close{
   position: absolute;
   top: 1rem;
   right: 1.5rem;
 }
 
-/* Show menu */
 .show-menu{
-  right: 0; /* Changed from '.show-menu' to '.show-menu .nav__menu' */
+  right: 0;
 }
-
-
-/* Active link */
 
 
 /*=============== HOME ===============*/
@@ -224,46 +217,42 @@ svg {
   background-color: var(--container-color);
 }
 
-.home__container{
+.home-container{
   padding-top: 2rem;
   row-gap: 2.5rem;
 }
 
-.home__content{
+.home-content{
   display: grid;
   row-gap: 2rem;
 }
 
-.home__data{
-  /* text-align: center; */
-}
-
-.home__subtitle,
-.home__education{
+.home-subtitle,
+.home-education{
   font-size: var(--bigger-font-size);
 }
 
-.home__subtitle span,
-.home__title{
+.home-subtitle span,
+.home-title{
   color: var(--first-color);
 }
 
-.home__title{
+.home-title{
   font-size: var(--bigger-font-size);
   font-weight: var(--font-semi-bold);
 }
 
-.home__description{
+.home-description{
   margin-block: 1rem 1.5rem;
 }
 
-.home__social{
+.home-social{
   display: flex;
   justify-content: center;
   column-gap: 1.25rem;
 }
 
-.home__social-link{
+.home-social-link{
   display: flex;
   background-color: var(--first-color);
   padding: .95rem;
@@ -272,15 +261,15 @@ svg {
   transition: transform .4s;
 }
 
-.home__social-link:hover{
+.home-social-link:hover{
   transform: translateY(-.25rem);;
 }
 
-.home__image{
+.home-image{
   justify-self: center;
 }
 
-.home__image img{
+.home-image img{
   border-radius: 40px;
 }
 /*=============== BUTTON ===============*/
@@ -296,28 +285,25 @@ svg {
   margin-bottom: 40px;
 }
 
-.button:hover{
-  box-shadow: 0 8px 24px var(--first-color);
-}
 
 /*=============== ABOUT ===============*/
-.about__container{
+.about-container{
   row-gap: 2.5rem;
 }
 
-.about__data{
+.about-data{
   text-align: center;
 }
 
-.about__description{
+.about-description{
   margin-bottom: 2rem;
 }
 
-.about__image{
+.about-image{
   justify-self: center;
 }
 
-.about__image img{
+.about-image img{
   border-radius: 40px;
 }
 
@@ -326,55 +312,60 @@ svg {
   background-color: var(--container-color);
 }
 
-.skills__container{
+.skills-container{
   padding-bottom: 2rem;
   row-gap: 3.5rem;
 }
 
-.skills__data{
+.skills-data{
   text-align: center;
 }
 
-.skills__description{
+.skills-description{
   margin-bottom: 2rem;
 }
 
-.skills__content,
-.skills__group{
+.skills-content,
+.skills-group{
   display: grid;
 }
 
-.skills__content{
+.skills-content{
   grid-template-columns: repeat(2, max-content);
   column-gap: 4rem;
   justify-content: center;
   align-items: baseline;
 }
 
-.skills__group{
+.skills-group{
   row-gap: 1rem;
-  list-style: decimal-leading-zero;
 }
 
-.skills__item{
+.skills-item{
   font-weight: var(--font-medium);
   color: var(--title-color);
 }
 
-.skills__item::marker{
+.skills-item::marker{
   color: var(--first-color);
 }
+
+.skills-item ul li {
+  font-size: 50px;
+  margin-right: 10rem;
+}
+
 /*=============== SERVICES ===============*/
 .services{
   text-align: center;
 }
 
-.services__container{
+.services-container{
   row-gap: 2rem;
   padding-block: 1rem;
 }
 
-.services__card{
+.services-card{
   text-align: center;
   background-color: var(--container-color);
   padding: 3rem 1.25rem;
@@ -382,20 +373,20 @@ svg {
   transition: border .4s;
 }
 
-.services__icon{
+.services-icon{
   display: block;
   font-size: 4rem;
   color: var(--first-color);
   margin-bottom: .75rem;
 }
 
-.services__title{
+.services-title{
   font-size: var(--h2-font-size);
   margin-bottom: 1.5rem;
 }
 
-.services__card:hover{
-  border: 2px solid var(--first-color);
+.services-card:hover{
+  border: 5px solid var(--first-color);
 }
 
 /*=============== PROJECTS ===============*/
@@ -403,31 +394,31 @@ svg {
   background-color: var(--container-color);
 }
 
-.projects__container{
+.project-container{
   row-gap: 2rem;
   justify-content: center;
   padding-block: 1rem;
 }
 
-.projects__card{
+.project-card{
   position: relative;
   border-radius: 1rem;
   overflow: hidden;
 }
 
-.projects__img{
+.project-img{
   width: 100%;
   height: 100%;
 }
 
-.projects__modal{
+.project-modal{
   position: absolute;
   left: 0;
   bottom: 0;
   width: 100%;
   height: 100%;
-  backdrop-filter: blur(2px);
-  -webkit-backdrop-filter: blur(2px);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
   border-radius: 1rem;
   display: flex;
   flex-direction: column;
@@ -436,75 +427,75 @@ svg {
   transform: bottom .4s;
   }
 
-.projects__subtitle,
-.projects__button{
+.project-subtitle,
+.project-button{
   color: var(--title-color);
   font-size: var(--small-font-size);
 }
 
-.projects__subtitle{
+.project-subtitle{
   display: block;
   margin-bottom: .25rem;
 }
 
-.projects__title{
+.project-title{
   font-size: var(--h2-font-size);
   margin-bottom: .75rem;
 }
 
-.projects__button{
+.project-button{
   display: flex;
   align-items: center;
   column-gap: .5rem;
   font-weight: var(--font-medium);
 }
 
-.projects__button i{
+.project-button i{
   font-size: 1.25rem;
 }
 
-.projects__card:hover .projects__modal{
+.project-card:hover .project-modal{
   bottom: 0;
 }
 /*=============== CONTACT ===============*/
 
-.contact__container {
+.contact-container {
   padding-top: 1rem;
 }
 
-.contact__form,
-.contact__group {
+.contact-form,
+.contact-group {
   display: grid;
   row-gap: 1rem;
 }
 
-.contact__form {
+.contact-form {
   position: relative;
 }
 
-.contact__input {
+.contact-input {
   padding: 1rem 1.25rem;
   border-radius: .5rem;
   background-color: var(--container-color);
   color: var(--title-color);
 }
 
-.contact__input::placeholder {
+.contact-input::placeholder {
   color: var(--text-color);
 }
 
-.contact__form textarea {
+.contact-form textarea {
   height: 11rem;
   resize: none;
   margin-bottom: 2rem;
 }
 
-.contact__button {
+.contact-button {
   justify-self: center;
   cursor: pointer;
 }
 
-.contact__message{
+.contact-message{
   position: absolute;
   left: 0;
   bottom: 4.5rem;
@@ -518,34 +509,34 @@ svg {
   padding-block: 3.5rem 2rem;
 }
 
-.footer__container{
+.footer-container{
   row-gap: 2rem;
   text-align: center;
 }
 
-.footer__title{
+.footer-title{
   font-size: var(--h1-font-size);
   font-weight: var(--font-semi-bold);
   margin-bottom: .25rem;
 }
 
-.footer__title span{
+.footer-title span{
   color: var(--first-color);
 }
 
-.footer__description{
+.footer-description{
   font-size: var(--normal-font-size);
   justify-content: center;
   align-items: center;
 }
 
-.footer__social{
+.footer-social{
   display: flex;
   justify-content: center;
   column-gap: 1.25rem;
 }
 
-.footer__social-link{
+.footer-social-link{
   display: flex;
   background-color: var(--first-color);
   padding: .5rem;
@@ -554,11 +545,11 @@ svg {
   transition: transform .4s;
 }
 
-.footer__social-link:hover{
+.footer-social-link:hover{
   transform: translateY(-.25rem);
 }
 
-.footer__copy{
+.footer-copy{
   font-size: var(--small-font-size);
   margin-top: 1rem;
 }
@@ -600,9 +591,6 @@ svg {
   transform: translateY(-.25rem);
 }
 
-/* Show Scroll Up */
-
-
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
 @media screen and (max-width: 320px){
@@ -610,56 +598,56 @@ svg {
     margin-inline: 1rem;
   }
 
-  .skills__content{
+  .skills-content{
     grid-template-columns: max-content;
     row-gap: 1rem;
   }
 
-  .services__card{
+  .services-card{
     padding-block: 1.5rem;
   }
 }
 
 /* For medium devices */
 @media screen and (min-width: 576px){
-  .home__container
-  .about__container
-  .skills__container
-  .services__container
-  .projects__container
-  .contact__container{
+  .home-container
+  .about-container
+  .skills-container
+  .services-container
+  .project-container
+  .contact-container{
     grid-template-columns: 360px;
     justify-content: center;
   }
 }
 
 @media screen and (min-width: 768px){
-  .nav__menu {
+  .nav-menu {
     width: 55%;
   }
-  .home__container,
-  .about__container,
-  .skills__container{
+  .home-container,
+  .about-container,
+  .skills-container{
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
   }
   .home-data,
   .about-data,
-  .skills__data,
-  :is(.about-data, .skills_data) :is(.section__subtitle, .section__title){
+  .skills-data,
+  :is(.about-data, .skills_data) :is(.section-subtitle, .section-title){
     text-align: initial;
   }
 
-  .home__social{
+  .home-social{
     justify-content: center;
     margin-left: -120px;
   }
 
-  .about__data {
+  .about-data {
     order: 1;
   }
-  .services__container,
-  .projects__container{
+  .services-container,
+  .project-container{
     grid-template-columns: repeat(2, 352px);
   }
 }
@@ -668,26 +656,22 @@ svg {
   .section{
     padding-block: 7rem 2rem;
   }
-  .section__subtitle {
+  .section-subtitle {
     font-size: var(--normal-font-size);
   }
   .nav{
     height: calc(var(--header-height) + 1.5rem);
   }
-  .nav__close,
-  .nav__toggle{
+  .nav-close,
+  .nav-toggle{
     display: none;
   }
-  .nav__list{
+  .nav-list{
     flex-direction: row;
     column-gap: 3rem;
   }
-  .nav__menu{
+  .nav-menu{
     width: initial;
-  }
-  .blur-header::after{
-    backdrop-filter: blur(25px);
-    -webkit-backdrop-filter: blur(25px);
   }
 }
 
@@ -696,100 +680,99 @@ svg {
     margin-inline: auto;
   }
 
-  .home__container{
+  .home-container{
     grid-template-columns: 455px 550px;
     column-gap: 7.5rem;
     padding-block: 2rem 3rem;
   }
 
-  .home__content{
+  .home-content{
     row-gap: 4.5rem;
   }
 
-  .home__description{
+  .home-description{
     margin-block: 1.5rem 2rem;
   }
 
-  .home__social{
+  .home-social{
     column-gap: 1.5rem;
   }
 
-  .about__container{
+  .about-container{
     grid-template-columns: 550px 460px;
     column-gap: 4.5rem;
     padding-bottom: 1rem;
   }
-  .about__description{
+  .about-description{
     margin-bottom: 3rem;;
   }
-  .skills__container{
+  .skills-container{
     grid-template-columns: 340px 425px;
     column-gap: 24rem;
     padding-bottom: 4rem;
   }
-  .skills__description{
+  .skills-description{
     margin-bottom: 3rem;
   }
-  .skills__content{
+  .skills-content{
     column-gap: 8rem;
   }
-  .skills__content{
+  .skills-content{
     column-gap: 8rem;
   }
-  .skills__group{
+  .skills-group{
     row-gap: 1.5rem;
   }
   .skills_item{
     font-size: var(--h3-font-size);
   }
-
-  .services__container{
+  .services-container{
     grid-template-columns: repeat(3, 352px);
     padding-block: 2.5rem 4rem;
   }
-  .services__card{
+  .services-card{
     padding: 3.5rem 2rem;
   }
-  .projects__container{
+  .project-container{
     grid-template-columns: repeat(3, 350px);
     row-gap: 3rem;
     padding-block: 2.5rem 4rem;
   }
-  .projects__button{
+  .project-button{
     font-size: var(--normal-font-size);
   }
-  .contact__container{
+  .contact-container{
     padding-block: 2.5rem 2rem;
   }
-  .contact__form{
+  .contact-form{
     row-gap: 1.5rem;
   }
-  .contact__group{
+  .contact-group{
     grid-template-columns: repeat(2, 1fr);
     column-gap: 1.5rem;
   }
-  .contact__input{
+  .contact-input{
     padding: 1.5rem;
   }
-  .contact__form textarea{
+  .contact-form textarea{
     height: 20rem;
   }
   .footer{
     padding-block: 4.5rem 4rem;
   }
-  .footer__container{
+  .footer-container{
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
     text-align: initial;
   }
-  .footer__title{
+  .footer-title{
     font-size: var(--bigger-font-size);
   }
-  .footer__social{
+  .footer-social{
     column-gap: 1.5rem;
   }
   .footer-copy{
-    margin: 0;
+    margin-right: 160px;
     justify-self: flex-end;
   }
   .scrollup{
